changes to support the mutual TLS based oauth2 provider token uri

--- a/src/main/resources/application-mtls.properties
+++ b/src/main/resources/application-mtls.properties
@@ -4,10 +4,14 @@ spring.security.oauth2.client.registration.local.authorization-grant-type=client
 spring.security.oauth2.client.registration.local.client-id=client_id
 spring.security.oauth2.client.registration.local.client-secret=client_secret
 
-oauth2.client.provider.local.token-uri.base-path=http://localhost:8353
+oauth2.client.provider.local.token-uri.base-path=https://localhost:8353
 spring.security.oauth2.client.provider.local.token-uri=${oauth2.client.provider.local.token-uri.base-path}/oauth/token
 
-oauth2.client.registration.local.ssl-enabled=false
+oauth2.client.registration.local.ssl-enabled=true
+oauth2.client.registration.local.keystore=BASE_64_ENCODED_KEYSTORE_JKS
+oauth2.client.registration.local.keystore-password=secret
+oauth2.client.registration.local.truststore=BASE_64_ENCODED_TRUSTSTORE_JKS
+oauth2.client.registration.local.truststore-password=secret
 
 test.client.host=http://localhost:8053
 test.client.base.url=${test.client.host}/api/v1
